# SIMDDetector

./: CMakeLists.txt  README.md  simd_detect  simd_detect.cpp
